# ChangeLog for sys-apps/systemd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.285 2014/07/10 17:12:06 floppym Exp $

  10 Jul 2014; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Move rootprefix logic into the main configure block.

*systemd-215-r1 (10 Jul 2014)

  10 Jul 2014; Mike Gilbert <floppym@gentoo.org> +systemd-215-r1.ebuild:
  Incorporate changes from the live ebuild.

  10 Jul 2014; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Don't enable resolved and timesyncd by default.

  10 Jul 2014; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Use multilib_native_use functions.

  08 Jul 2014; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Don't disable gcrypt and xz support for non-native abis, bug 516702.

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> systemd-212-r5.ebuild:
  Stable for x86, wrt bug #509076

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> systemd-212-r5.ebuild:
  Stable for sparc, wrt bug #509076

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> systemd-212-r5.ebuild:
  Stable for ppc64, wrt bug #509076

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> systemd-212-r5.ebuild:
  Stable for ppc, wrt bug #509076

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> systemd-212-r5.ebuild:
  Stable for ia64, wrt bug #509076

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> systemd-212-r5.ebuild:
  Stable for alpha, wrt bug #509076

  04 Jul 2014; Mike Gilbert <floppym@gentoo.org> systemd-215.ebuild:
  Force regeneration of org.freedesktop.systemd1.policy.

  04 Jul 2014; Mike Gilbert <floppym@gentoo.org> systemd-215.ebuild,
  systemd-9999.ebuild:
  Pass --enable-dependency-tracking as a workaround for bug 516346.

  04 Jul 2014; Mike Gilbert <floppym@gentoo.org> metadata.xml,
  systemd-215.ebuild, systemd-9999.ebuild:
  Add optional dependency on elfutils. Disable additional optional binaries when